<resources>
    <string name="app_name">Manguca</string>
    <string name="home">Inicio</string>
    <string name="program">Programa</string>
    <string name="location">Localización</string>
    <string name="importantdates">Fechas Importantes</string>
    <string name="assistant">Asistentes</string>
    <string name="add_assistant">Añadir asistentes</string>
    <string name="edit_assitant">Editar asistentes</string>
    <string name="appwidget_text">Programa Manguca</string>
    <string name="configure">Configuración</string>
    <string name="add_widget">Añadir Widget</string>
    <string name="title_map">Ubicación del mapa</string>
    <string name="title_event">Información del recinto </string>
    <string name="inf_event">El Complejo Deportivo, situada en el marco natural e incomparable de Puerto Real, es un espacio con identidad propia.
        Ha integrado su singularidad a numerosos actos privados y corporativos, sorprendiendo y maravillando a los asistentes de estos eventos.
        Con 300 m2 repartidos en 3 plazas en diferentes niveles.\n\nUn espacio ideal para la celebración de actos al aire libre como recepciones,
        cenas o exhibiciones deportivas, así como también sesiones fotográficas, debido a que se trata de un espacio emblemático con unas vistas panorámicas únicas. </string>
    <string name="nombre">Nombre </string>
    <string name="apellido">Apellido </string>
    <string name="email">Email </string>
    <string name="telefono">Telefono </string>
    <string name="dni">DNI</string>
    <string name="fechaIns">Fecha de Inscripción</string>
    <string name="fechaNac">Fecha de Nacimiento</string>
    <string name="format_date">dd/MM/yy</string>
    <string name="aceptar">Aceptar </string>
    <string name="añadir">Añadir </string>
    <string name="added_assistant">El asistente ha sido añadido</string>
    <string name="delete_assitant">El asistente ha sido eliminado</string>
    <string name="put_assitant">El asistente ha sido editado</string>
    <string name="eliminar_confir">Eliminar</string>
    <string name="mensaje_confir">¿Está seguro/a de eliminar este asistente?</string>
    <string name="cancelar_confir">Cancelar"</string>
    <string name="title_notif">Añadir titulo</string>
    <string name="message_notif">Aádir notificacion</string>
    <string name="snack_notif">Aqui hay que hacer una resta de fechas</string>
    <string name="past_date">Aqui decir que las fechas han pasado</string>
    <string name="marker_map">Manguca festival</string>
    <string name="post_success">Post successfully!</string>
    <string name="post_fail">"Post failed!</string>
    <string name="put_success">Put successfully!</string>
    <string name="put_fail">"Put failed!</string>
    <string name="delete_success">Delete successfully!</string>
    <string name="delete_fail">"Delete failed!</string>
    <string name="channel_id">manuguca_location_channel</string>
    <string name="channel_name">manguca_location</string>
    <string-array name="title_main">
        <item>Voces de Overwatch</item>
        <item>Pol Tattoo</item>
    </string-array>
    <string-array name="role_main">
        <item>Actores</item>
        <item>Artista</item>
    </string-array>
    <string-array name="title_main_contest">
        <item>Asian Cover Dance</item>
        <item>Pop Culture Hiroshima</item>
    </string-array>
    <string-array name="role_main_contest">
        <item>Danza</item>
        <item>Cosplay y actuación</item>
    </string-array>
    <string-array name="Main">
        <item> Charla WowChakra </item>
        <item> Inscripciones competición </item>
        <item> Taller de Dibujo con Laia López </item>
        <item> Seminario con Youtuber Kompae </item>
        <item> Bodas otakus </item>
        <item> Bailes Kpopers</item>
        <item> Competición DDR </item>
        <item> Charla Voces de Overwatch </item>
        <item> Descanso</item>
        <item>Torneo Tekken</item>
        <item>Torneo LOL</item>
        <item>Torneo Super Smash Bros.</item>
        <item>Torneo Magic</item>
        <item>Torneo YuGiOh</item>
        <item>Torneo FIFA</item>
        <item> Concierto FAKY</item>
        <item> Concierto SUKISHA </item>


    </string-array>
    <string-array name="Main_day2">
        <item> Firmas Laia López </item>
        <item> Firmas H Alexander </item>
        <item>Inscripciones competición</item>
        <item>Taller de fotografía cosplay</item>
        <item>Ser autónomo: con Ginny Di</item>
        <item>Bodas otakus</item>
        <item>Bailes Kpopers</item>
        <item>Charla Voces de OW</item>
        <item>Competición DDR</item>
        <item>Nate Gentile: Básicos de Overclocking</item>
        <item>Descanso</item>
        <item>Torneo Tekken</item>
        <item>Torneo LOL</item>
        <item>Torneo Super Smash Bros.</item>
        <item>Torneo Magic</item>
        <item>Torneo YuGiOh</item>
        <item>Torneo FIFA</item>
        <item>Concierto Kiki vivi lily</item>
        <item>Concierto Lady Beard</item>
    </string-array>
    <string-array name="Main_day3">
        <item> Exposición coches frikis </item>
        <item> Inscripciones competición </item>
        <item> Degustación comidas japonesas </item>
        <item> Bodas otakus</item>
        <item> Pasarela Cosplay</item>
        <item> Descanso</item>
        <item> Torneo Tekken</item>
        <item>Torneo LOL</item>
        <item>Torneo Super Smash Bros.</item>
        <item>Torneo Magic</item>
        <item>Torneo YuGiOh</item>
        <item>Torneo FIFA</item>
        <item>Competición DDR</item>
        <item> Bailes Kpopers</item>
    </string-array>
    <string-array name="Description">
        <item>10:00-12:00</item>
        <item>10:00-12:00</item>
        <item>11:00-13:30</item>
        <item>11:00-13:30</item>
        <item>12:30-20:00</item>
        <item>12:30-15:00</item>
        <item>13:30-15:00</item>
        <item>13:30-15:00</item>
        <item>15:00-16:30</item>
        <item>16:30-19:00</item>
        <item>16:30-20:00</item>
        <item>16:30-17:30</item>
        <item>17:30-19:00</item>
        <item>19:00-20:00</item>
        <item>19:00-20:00</item>
        <item>20:00-21:00</item>
        <item>21:00-22:00</item>
    </string-array>
    <string-array name="Description_day2">
        <item>10:00-11:30</item>
        <item>10:00-11:30</item>
        <item>10:00-12:30</item>
        <item>11:30-13:30</item>
        <item>11:30-13:00</item>
        <item>12:30-20:00</item>
        <item>13:00-15:00</item>
        <item>13:00-14:00</item>
        <item>13:30-15:00</item>
        <item>14:00-15:00</item>
        <item>15:00-16:30</item>
        <item>16:30-19:00</item>
        <item>16:30-20:00</item>
        <item>16:30-17:30</item>
        <item>17:30-19:00</item>
        <item>19:00-20:00</item>
        <item>19:00-20:00</item>
        <item>20:00-21:00</item>
        <item>21:00-22:00</item>
    </string-array>
    <string-array name="Description_day3">
        <item>10:00-15:00</item>
        <item>10:00-12:30</item>
        <item>10:00-15:00</item>
        <item>12:30-20:00</item>
        <item>12:30-15:00</item>
        <item>15:00-16:30</item>
        <item>16:30-19:00</item>
        <item>16:30-20:00</item>
        <item>16:30-17:30</item>
        <item>17:30-19:00</item>
        <item>19:00-20:00</item>
        <item>19:00-20:00</item>
        <item>20:00-21:30</item>
        <item>20:00-22:00</item>
    </string-array>
    <string-array name="Week">
        <item> Monday </item>
        <item> Tuesday </item>
        <item> Wednesday </item>
        <item> Thursday </item>
        <item> Friday </item>
        <item> Saturday </item>
    </string-array>
    <string-array name="roles">
        <item>Actividad</item>
        <item>Torneo</item>
        <item>Taller</item>
        <item>Taller</item>
        <item>Actividad</item>
        <item>Actividad</item>
        <item>Torneo</item>
        <item>Actividad</item>
        <item>Descanso</item>
        <item>Torneo</item>
        <item>Torneo</item>
        <item>Torneo</item>
        <item>Torneo</item>
        <item>Torneo</item>
        <item>Torneo</item>
        <item>Concierto</item>
        <item>Concierto</item>

    </string-array>
    <string-array name="roles_day2">
        <item>Actividad</item>
        <item>Actividad</item>
        <item>Torneo</item>
        <item>Taller</item>
        <item>Taller</item>
        <item>Actividad</item>
        <item>Actividad</item>
        <item>Actividad</item>
        <item>Torneo</item>
        <item>Taller</item>
        <item>Descanso</item>
        <item>Torneo</item>
        <item>Torneo</item>
        <item>Torneo</item>
        <item>Torneo</item>
        <item>Torneo</item>
        <item>Torneo</item>
        <item>Concierto</item>
        <item>Concierto</item>

    </string-array>
    <string-array name="roles_day3">
        <item>Actividad</item>
        <item>Torneo</item>
        <item>Actividad</item>
        <item>Actividad</item>
        <item>Actividad</item>
        <item>Descanso</item>
        <item>Torneo</item>
        <item>Torneo</item>
        <item>Torneo</item>
        <item>Torneo</item>
        <item>Torneo</item>
        <item>Torneo</item>
        <item>Torneo</item>
        <item>Actividad</item>
    </string-array>
    <string-array name="Monday">
        <item>Mixed Signal Design</item>
        <item>Analog Wave Propogation</item>
        <item>Break</item>
        <item>CT2 Lab - A1\nMSD Lab - A2</item>
        <item>Break</item>
        <item>Cluster Elective</item>
        <item>Cluster Elective Lab/Tut</item>
    </string-array>
    <string-array name="Tuesday">
        <item>Computer Communication Networks</item>
        <item>Communication Theory - 2</item>
        <item>Break</item>
        <item>Computer Communication Networks</item>
        <item>Mixed Signal Design</item>
        <item>Break</item>
        <item> CT2 Lab - A4\nMSD Lab - A1</item>
    </string-array>
    <string-array name="Wednesday">
        <item>Antenna and Wave Propagation</item>
        <item>Computer Communication Networks</item>
        <item>Break</item>
        <item>Cluster Elective</item>
        <item>Department Elective</item>
        <item>Break</item>
        <item> AWP Tutorial</item>
    </string-array>
    <string-array name="Thursday">
        <item>Antenna and Wave Propagation </item>
        <item>Communication Theory - 2</item>
        <item>Break</item>
        <item>Cluster Elective</item>
        <item>Department Elective</item>
        <item>Break</item>
        <item> CT2 Lab - A2\nMSD Lab - A3</item>
    </string-array>
    <string-array name="Friday">
        <item> CT2 Lab - A3\nMSD Lab - A4</item>
        <item>Break</item>
        <item>Mixed Signal Design</item>
        <item>Communication Theory - 2</item>
        <item>Break</item>
        <item>Department Elective Tut</item>
    </string-array>
    <string-array name="Saturday">
        <item>Self Study</item>
        <item>Break</item>
        <item>Self Study</item>
    </string-array>
    <string-array name="time1">
        <item>8:55AM - 9:50AM</item>
        <item>9:50AM - 10:45AM</item>
        <item>10:45AM - 11:15AM</item>
        <item>11:15AM - 1:05PM</item>
        <item>1:05PM - 2:00PM</item>
        <item>2:00PM - 2:55PM</item>
        <item>2:55PM - 4:45PM</item>
    </string-array>
    <string-array name="time2">
        <item>8:55AM - 9:50AM</item>
        <item>9:50AM - 10:45AM</item>
        <item>10:45AM - 11:15AM</item>
        <item>11:15AM - 12:10PM</item>
        <item>12:10PM - 1:05PM</item>
        <item>1:05PM - 2:00PM</item>
        <item>2:00PM - 3:50PM</item>
    </string-array>
</resources>