<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menu_program"
        android:icon="@drawable/ic_schedule"
        android:title="@string/program"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menu_assitant"
        android:icon="@drawable/ic_assistants"
        android:title="@string/assistant"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menu_location"
        android:icon="@drawable/ic_location"
        android:title="@string/location"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menu_importantdates"
        android:icon="@drawable/ic_date"
        android:title="@string/importantdates"
        app:showAsAction="always"
        />

</menu>