<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_assistant"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".assistant.AddAssistantActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/top_toolbar"
            layout="@layout/toolbar_top" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="40dp">

            <EditText
                android:id="@+id/TxtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/nombre"
                android:inputType="text" />

            <EditText
                android:id="@+id/TxtApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/apellido"
                android:inputType="text" />

            <EditText
                android:id="@+id/TxtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/TxtTlf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/telefono"
                android:inputType="text" />

            <EditText
                android:id="@+id/TxtDni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/dni"
                android:inputType="text" />

            <EditText
                android:id="@+id/DateNac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/fechaNac"
                android:inputType="date"
                android:maxLines="1" />

            <EditText
                android:id="@+id/fechaIns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/fechaIns"
                android:inputType="date"
                android:maxLines="1" />

            <Button
                android:id="@+id/BtnAceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/whiteSmoke"
                android:enabled="false"
                android:text="@string/añadir" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/bottom_toolbar"
                layout="@layout/toolbar_bottom" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>