<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/assistant_edit"
    tools:context=".assistant.EditAssistantActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <include
            android:id="@+id/top_toolbar"
            layout="@layout/toolbar_top"></include>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="60dp"
            >

            <TextView
                android:id="@+id/LblNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre" />

            <EditText
                android:id="@+id/TxtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:id="@+id/LblApellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apellido" />

            <EditText
                android:id="@+id/TxtApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:id="@+id/LblEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/TxtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:id="@+id/LblTlf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefono" />

            <EditText
                android:id="@+id/TxtTlf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:id="@+id/LblDni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dni" />

            <EditText
                android:id="@+id/TxtDni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:id="@+id/LblBirtd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fechaNac" />

            <EditText
                android:id="@+id/DateNac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1" />

            <TextView
                android:id="@+id/LblIns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fechaIns" />

            <EditText
                android:id="@+id/fechaIns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1" />
            <Button
                android:id="@+id/BtnAceptar"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/whiteSmoke"
                android:enabled="false"
                android:text="@string/aceptar" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <include
                android:id="@+id/bottom_toolbar"
                layout="@layout/toolbar_bottom"></include>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>