<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/assistant_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/top_toolbar"
            layout="@layout/toolbar_top" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/AssistantsTop"

                >

                <es.manguca.Utils.LetterImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:id="@+id/iconAssistants"
                    android:layout_margin="8dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/NameAssistant"
                    android:text="@string/nombre"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:layout_margin="8dp"
                    android:gravity="center_vertical"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/LastNameAssistant"
                    android:text="@string/apellido"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:layout_margin="8dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/DniAssistant"
                    android:text="@string/dni"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:layout_margin="8dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/EmailAssistant"
                    android:text="@string/email"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:layout_margin="8dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/PhoneAssistant"
                    android:text="@string/telefono"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:layout_margin="8dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/BirthAssistant"
                    android:text="@string/fechaNac"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:layout_margin="8dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/InsDateAssistant"
                    android:text="@string/fechaIns"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:layout_margin="8dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/bottom_toolbar"
                layout="@layout/toolbar_bottom" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>